--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Workshop generated files
+/cifar10_tfx/metadata/
+/cifar10_tfx/pipelines/
+/cifar10_tfx/serving_model/
