--- a/model_serving/flask/Dockerfile
+++ b/model_serving/flask/Dockerfile
@@ -8,4 +8,4 @@ RUN pip3 install -r requirements.txt
 
 COPY . .
 
-CMD ["gunicorn" "--bind" "0.0.0.0:5000" "flask_server:app"]
+CMD [ "gunicorn", "--bind", "0.0.0.0:5000", "flask_server:app" ]
